# group-chat-oss

./: .gitignore  LICENSE  README.md  config.example.toml  config.test.toml  pyproject.toml  roster.example.toml
adapters/: __init__.py  tmux_dispatcher.py  tmux_presence.py  tmux_reply_watcher.py  webhook_dispatcher.py
docs/: ARCHITECTURE.md  DEPLOY_SELF_HOSTED.md  PRIVACY_REVIEW.md
examples/: webhook_agent.py
examples/bridges/: group_bridge.py  telegram_bot.py
examples/deploy/: launchd.plist.example  start.sh.example  systemd.service.example
examples/frontend/: minimal.html
examples/ios-swiftui/: GroupChatDemo.swift  README.md
groupchat/: __init__.py  ack_reminder.py  auth.py  cli.py  config.py  dispatcher.py  presence.py  server.py  store.py
tests/: test_routing.py  test_store.py  test_tmux_adapters.py  test_webhook_dispatcher.py
