[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "groupchat-oss"
version = "0.1.0"
description = "A small configurable workgroup chat server with JSONL storage and REST APIs."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "groupchat contributors"}]
dependencies = []

[project.scripts]
groupchat-server = "groupchat.server:main"
groupchat = "groupchat.cli:main"
groupchat-ack-reminder = "groupchat.ack_reminder:main"

[tool.setuptools.packages.find]
include = ["groupchat", "adapters"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
